style.css
*{
  margin: 0;
  font-family: 'Ubuntu', sans-serif;
  letter-spacing: 0.2rem;
  color: white;
}
body{
  background: linear-gradient(90deg, rgba(2,52,89,1) 27%, rgba(34,195,169,1) 82%, rgba(34,193,195,1) 100%);
}

.mi_boton:hover{
  background-color: white;
  color: black;

}
.mi_boton{
  background-color: black;
  color: white;
  min-width: 43.45vw;
}
#span1{
  color: aqua;
}
.mio{
  background-color: white;
  border-radius: 0.75rem;
  padding: 0.75rem;
}
.mycontainer{
  border: 0.1rem solid black !important;
  
  font-weight: 900 !important;
  color:white;
}
.h1mine{
  
  border-radius:0.75rem;
  padding-bottom: 0.75rem;
  
  color: black !important;
}
.nav_min1{
  background-color: black;  
}
a{
  color: black;
}
h2{
  text-align: center;
  padding: 0.75rem;
  letter-spacing: 0.5rem;
  color: black;
  padding: 1rem 0;
  font-weight: bolder;
  background-color: rgba(250, 250, 250, 0.5);
  border-radius: 1rem;
  border: 1px black solid;
}
ul{
  background-color: rgba(19, 19, 19, 0.9);
}
.aboutcontainer{
  display: grid;
  grid-template-columns: repeat(12, 1fr);
  grid-template-rows: auto auto;
  gap: 0.75rem;
  padding-bottom: 1rem;
}
.item-a{
  grid-row-start: 1;
  grid-column-start: 2;
  grid-column-end: 10;
  color:rgba(72, 77, 83);
  background-color:black;
  padding: 1rem;
  color: #E1D9D1;
  margin: 0px;
}
.item-b{
  grid-row-start: 2;
  grid-column-start: 4;
  grid-column-end: 12;
  color:rgba(72, 77, 83);
  background-color: black;
  padding: 1rem;
  color: #E1D9D1;
}
.imagen{
  width: 100%;
  height: 100%;
  border-radius: 0.95rem;
}
.aboutcontainer div{
  
  border-radius: 0.75rem;  
  font-weight: 500;
  font-size: larger;
  
}
.imagen-a{
  grid-row-start: 1;
  grid-column-start: 10;
  grid-column-end: 12;
  
  
}
.imagen-b{
  grid-row-start: 2;
  grid-column-start: 2;
  grid-column-end: 4;
}
@media (max-width:1200px) {
  .mainimg{
    height: 50vh !important;
  }
  .item-a{
  grid-row-start: 2;
  grid-column-start: 2;
  grid-column-end: -2;
  }

  .imagen-b{
    grid-row-start: 1;
    grid-column-start: 2;
    grid-column-end: -2;
    }
    .imagen-a{
      grid-row-start: 1;
      grid-column-start: 2;
      grid-column-end: -2;
      order: 2;
    }
    .item-b{
      grid-row-start: 3;
      grid-column-start: 2;
      grid-column-end: -2;
    }
}
.little_boxes{
  display: flex;
  color: #E1D9D1;
  background-color: black;
  border-radius: 0.75rem;
  padding: 0.75rem;
  min-height: 38vh;
  justify-content: center;
  align-content: center;
  align-items: center;
}
.little_boxes:hover{
  background-color: white;
  color:#000;
  cursor:pointer;
}
.little_boxes p{
  display: none;
  
}

.education_container{
  display: flex;
  flex-wrap: wrap;
  flex-basis: auto;
  max-width: 100%;
  gap: 1rem;
  flex-direction: row;
  justify-content:space-between;
}
.columna{
  display:flex;
  flex-direction: column;
  flex: 1 1 25vw;
  gap: 1rem;
  justify-content: center;
  text-align: center;
  margin: 0px 3rem;
  padding-bottom: 1rem;
}
.experience ul{
  border-radius: 1rem;
  padding: 1rem;
}
.none{
  
  padding-left: 1rem;
  list-style:none;
}
.experience h3{
  letter-spacing: 0.5rem;
}

